--- a/Templates/Website/Deals.html
+++ b/Templates/Website/Deals.html
@@ -5,7 +5,7 @@
 
 
 
-
+<section class="landing-text text-center">
         <h1>Explore The World <br>
             <p><em>Life is short and the world is wide</em></p>
         </h1>
