--- a/Templates/Website/login.html
+++ b/Templates/Website/login.html
@@ -1,6 +1,26 @@
 {%  extends 'base.html' %}
 {% load static %}
 {% block content %}
+<section class="landing-text text-center">
+            <h1>Explore The World <br>
+            <p><em>Life is short and the world is wide</em></p>
+        </h1>
+     <div class="customize">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search your Destination" readonly>
+
+                <div class="input-group-append">
+                    <button type="submit" class="input-group-text btn">Search</button>
+                </div>
+            </div>
+        </div>
+
+
+
+
+        </div>
+    </section>
+
  <div class="container">
      <div class="row">
          <div class="col-md-3"></div>
@@ -38,4 +58,5 @@
          </div>
      </div>
  </div>
+
 {% endblock %}
