--- a/Templates/base.html
+++ b/Templates/base.html
@@ -59,6 +59,9 @@
                                     <li class="nav-item">
                                         <a href="/Booking" class="nav-link">  Booking </a>
                                     </li>
+                                     <li class="nav-item">
+                                        <a href="/tickets" class="nav-link"> My Booking </a>
+                                    </li>
 
                                     <li class="nav-item">
                                         <a href="/Deals" class="nav-link"> Deals </a>
@@ -105,13 +108,13 @@
     <section class="footer">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 col-12">
                     <div class="row">
                         <div class="col-md-12">
                             <img src="{% static 'image/logo.png' %}" class="footer-logo">
                         </div>
 
-                        <div class="col-md-12">
+                        <div class="col-md-12 col-12">
                             <div class="p-cc">
                                 <p class="text-justify">Since 2018, Journy has been revolutionizing the travel industry. Metasearch for travel? No one was doing it.
                                     <p> Until we did. </p>
@@ -120,19 +123,19 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-12">
                     <h4>Features</h4>
                     <p>Deals & Offers</p>
                     <p>Customer Reviews</p>
                     <p>Cancelation Policy</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-12">
                     <h4>Quick Contact</h4>
                     <p><i class="fa fa-phone-square"></i> +01 45568952</p>
                     <p><i class="fa fa-envelope"></i> Abhishek.basnet.92@gmail.com</p>
                     <p><i class="fa fa-home"></i> 9 London street</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-12">
                     <h4>Follow Us On</h4>
                     <p><i class="fab fa-facebook-square"></i> Facebook</p>
                     <p><i class="fab fa-youtube"></i>Youtube</p>
